--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,3 @@
-200 lines (166 sloc)  3.35 KB
-  
 * {
     box-sizing: border-box;
     padding: 0;
@@ -17,6 +15,8 @@ header {
     color: #ffffff;
 }
 
+/* added id to logo semantic*/
+
 #logo {
     display: inline-block;
     font-size: 48px;
@@ -25,6 +25,8 @@ header {
 #seo {
     color: #d9dcd6;
 }
+
+/* created semantic tag for nav and updated corresponding css selectors*/
 
 nav {
     padding-top: 15px;
@@ -52,6 +54,8 @@ p {
     font-size: 16px;
 }
 
+/* changed image name*/
+
 .top-image {
     height: 800px;
     width: 100%;
@@ -70,6 +74,8 @@ p {
     float: right;
     margin-left: 25px;
 }
+
+/*created semantic tag for main content and consolidated associated css selectors*/
 
 main {
     width: 70%;
@@ -94,6 +100,8 @@ main section h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
+
+/* created semantic tag for side bar and consolidated associated css selectors*/
 
 aside {
     margin-right: 20px;
@@ -121,6 +129,8 @@ aside section img {
     margin: 10px auto;
     max-width: 150px;
 }
+
+/* creared semantic tag and updated associated css selectors*/
 
 footer {
     padding: 30px;
